--- a/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
+++ b/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
@@ -9,5 +9,5 @@ services:
       POSTGRES_PASSWORD: '123'
     ports:
       - '5432:5432'
-    volumes:
-      - './init:/docker-entrypoint-initdb.d'
+   # volumes:
+   #   - './init:/docker-entrypoint-initdb.d'
