--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  messages:
+    basename: ErrorResponseMessages,ValidationViolationMessages
   datasource:
     url: jdbc:postgresql://localhost:5432/feast_db
     username: user
