--- a/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
@@ -1,1 +1,4 @@
 ErrorResponse.message.validation=\u0432\u0430\u043B\u0438\u0434\u0430\u0446\u0438\u044F \u043D\u0435 \u043F\u0440\u043E\u0439\u0434\u0435\u043D\u0430
+ErrorResponse.message.badCredentials=\u043D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+ErrorResponse.message.usernameNotFound=\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0441 \u0442\u0430\u043A\u0438\u043C \u043B\u043E\u0433\u0438\u043D\u043E\u043C \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
+ErrorResponse.message.usernameAlreadyTaken=\u0442\u0430\u043A\u043E\u0439 \u043B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
