translate everything to english, change ErrorHandler little bit

--- a/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
+++ b/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres:15.1-alpine
     environment:
       POSTGRES_DB: 'feast_db'
-      POSTGRES_USER: 'user'     #TODO нормальное имя пользователя и пароль
+      POSTGRES_USER: 'user'     #TODO change user and password before production
       POSTGRES_PASSWORD: '123'
     ports:
       - '5432:5432'
