--- a/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
@@ -1,4 +1,6 @@
 ErrorResponse.message.validation=validation failed
 ErrorResponse.message.badCredentials=incorrect password
 ErrorResponse.message.usernameNotFound=username wasn't found
-ErrorResponse.message.usernameAlreadyTaken=username is already taken
+ErrorResponse.message.alreadyTaken.username=username was already taken
+ErrorResponse.message.alreadyTaken.email=email was already taken
+ErrorResponse.message.alreadyTaken.phone=phone number was already taken
