--- a/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
@@ -1,8 +1,12 @@
+#Global
+ErrorResponse.message.internalServerError=internal server error
 ErrorResponse.message.validation=validation failed
+ErrorResponse.message.tokenUnauthorized=token authorization failed
+ErrorResponse.message.noSuchPath=this path doesn't exist
+
+#User
 ErrorResponse.message.badCredentials=incorrect password
 ErrorResponse.message.usernameNotFound=username wasn't found
-ErrorResponse.message.userIdNotFound=user id wasn't found
 ErrorResponse.message.alreadyTaken.username=username was already taken
 ErrorResponse.message.alreadyTaken.email=email was already taken
 ErrorResponse.message.alreadyTaken.phone=phone number was already taken
-ErrorResponse.message.corruptedToken=provided token is corrupted
