--- a/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
@@ -3,3 +3,4 @@ ValidationViolation.message.notNull=must not be null
 ValidationViolation.message.email=not a well-formed email
 ValidationViolation.message.phone=not a well-formed phone number
 ValidationViolation.message.pattern=must match "{0}"
+ValidationViolation.message.noWhitespaces=must not contain whitespace characters
