--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 spring:
   messages:
     basename: ErrorResponseMessages,ValidationViolationMessages
+
   datasource:
     url: jdbc:postgresql://localhost:5432/feast_db
     username: user
@@ -14,3 +15,10 @@ spring:
       hibernate:
         format_sql: true
     database: postgresql
+
+#Disable spring default error handling
+server:
+  error:
+    whitelabel:
+      enabled: false
+    path: /error
