refactor openAPI according to code

--- a/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ErrorResponseMessages.properties
@@ -1,8 +1,9 @@
+#Before making any changes, ensure you've changed openAPI accordingly
+
 #Global
-ErrorResponse.message.internalServerError=internal server error
 ErrorResponse.message.validation=validation failed
-ErrorResponse.message.tokenUnauthorized=token authorization failed
 ErrorResponse.message.noSuchPath=this path doesn't exist
+ErrorResponse.message.mediaType.notSupported=content type is not supported
 
 #User
 ErrorResponse.message.badCredentials=incorrect password
