--- a/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
@@ -1,6 +1,6 @@
 ValidationViolation.message.notBlank=must not be blank
 ValidationViolation.message.notNull=must not be null
-ValidationViolation.message.email=not a well-formed email
-ValidationViolation.message.phone=not a well-formed phone number
+ValidationViolation.message.email=must be a well-formed email
+ValidationViolation.message.phone=must be a well-formed phone number
 ValidationViolation.message.pattern=must match "{0}"
 ValidationViolation.message.noWhitespaces=must not contain whitespace characters
