--- a/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
+++ b/polzunov-feast-server/src/main/resources/ValidationViolationMessages.properties
@@ -4,3 +4,4 @@ ValidationViolation.message.email=must be a well-formed email
 ValidationViolation.message.phone=must be a well-formed phone number
 ValidationViolation.message.pattern=must match "{0}"
 ValidationViolation.message.noWhitespaces=must not contain whitespace characters
+ValidationViolation.message.dateTime=must be a date-time of 'yyy-MM-dd HH:mm:ss' format
