let's start fresh

--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   messages:
-    basename: ErrorResponseMessages,ValidationViolationMessages
+    basename: ValidationViolationMessages
 
   datasource:
     url: jdbc:postgresql://localhost:5432/feast_db
