--- a/polzunov-feast-server/pom.xml
+++ b/polzunov-feast-server/pom.xml
@@ -49,7 +49,7 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <!-- Для spring security -->
+        <!-- for spring security and JWT authorization -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
@@ -60,7 +60,7 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <!--###################Зависимости необходимые для генерации из openAPI######################################-->
+        <!--###################For open api generation###############################################################-->
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator-maven-plugin</artifactId>
@@ -101,7 +101,7 @@
                 </configuration>
             </plugin>
 
-            <!--Плагин для генерации из openAPI-->
+            <!--for open api generation-->
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
