--- a/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
+++ b/polzunov-feast-server/src/main/resources/docker-with-postgres/docker-compose.yaml
@@ -1,13 +1,21 @@
+# to create container run 'docker-compose up -d' in this directory
 version: "3.9"
 services:
-  db:
-    container_name: db
+  postgres:
+    container_name: polzunov-feast-db
     image: postgres:15.1-alpine
     environment:
-      POSTGRES_DB: 'feast_db'
-      POSTGRES_USER: 'user'     #TODO change user and password before production
-      POSTGRES_PASSWORD: '123'
+      POSTGRES_DB: 'polzunov-feast-db'
+      POSTGRES_USER: 'polzunov'
+      POSTGRES_PASSWORD: 'feast'
     ports:
       - '5432:5432'
     volumes:
-      - './init:/docker-entrypoint-initdb.d'
+      #initial scripts (e.g. schema.sql) will be read from ./init directory
+      - ./init:/docker-entrypoint-initdb.d
+      #data will be stored in '../../../../../polzunov-feat-data' directory (in the same folder as this project)
+      - ../../../../../polzunov-feat-data:/var/lib/postgresql/data
+
+volumes:
+  data:
+    name: polzunov-feast-data
