feat: - DELETE /place/{id} (for now no auth required) - GET /place/{id} - GET /place with pagination - PUT /place (for now no auth required) - POST /place (for now no auth required)

--- a/polzunov-feast-server/.gitignore
+++ b/polzunov-feast-server/.gitignore
@@ -1,5 +1,4 @@
 HELP.md
-http-request-log.http
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -32,3 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
+!/.idea/httpRequests/http-requests-log.http
