--- a/polzunov-feast-server/.gitignore
+++ b/polzunov-feast-server/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+!/.idea/.gitignore
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -31,4 +32,4 @@ build/
 
 ### VS Code ###
 .vscode/
-!/.idea/httpRequests/http-requests-log.http
+
