feat: - add dev profile with h2 db and console
docs:
- update How to run section in README.md

--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,7 +1,4 @@
 spring:
-  messages:
-    basename: ValidationViolationMessages
-
   datasource:
     url: jdbc:postgresql://localhost:5432/polzunov-feast-db
     username: polzunov
@@ -9,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
