feat: - add admin and root roles
docs:
- reflected changes

--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
+root:
+  #TODO substitute with env variables before prod
+  username: root
+  password: root
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/polzunov-feast-db
