--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 root:
   #TODO substitute with env variables before prod
   username: root
-  password: root
+  password: root123!
 
 spring:
   datasource:
