refactor: - remove user's username and add id in dto - updating and deleting admins now use ids instead of usernames
docs:
- updated readme and open api accordingly

--- a/polzunov-feast-server/src/main/resources/application.yaml
+++ b/polzunov-feast-server/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 root:
   #TODO substitute with env variables before prod
-  username: root
+  email: root@root.root
   password: root123!
 
 spring:
