feat: - add event images
refactor:
- move information about event_categories table keys into separate utility class

docs:
- fix some parts of open api, related to images

--- a/polzunov-feast-server/docker-compose.yaml
+++ b/polzunov-feast-server/docker-compose.yaml
@@ -1,4 +1,4 @@
-# to create container run 'docker-compose up -d' in this directory
+# to create containers run 'docker-compose up -d' in this directory
 version: "3.9"
 services:
   polzunov-feast-db:
@@ -12,6 +12,22 @@ services:
       - '5432:5432'
     volumes:
       - polzunov-feast-data:/var/lib/postgresql/data
+
+  polzunov-feast-static-server:
+    container_name: polzunov-feast-static-server
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - '9090:9090'
+    volumes:
+      - ./static-data:/home/nginx/static-data
+    environment:
+      - NGINX_PORT=9090
+      - NGINX_HOST=localhost
+      - NGINX_ROOT_DIR=/home/nginx/static-data
+    depends_on:
+      - polzunov-feast-db
 volumes:
   polzunov-feast-data:
     name: polzunov-feast-data
