fix cors in nginx

--- a/polzunov-feast-server/nginx/default.conf
+++ b/polzunov-feast-server/nginx/default.conf
@@ -6,5 +6,6 @@ server {
     location / {
         autoindex on;
         try_files $uri $uri/ =404;
+        add_header 'Access-Control-Allow-Origin' '*';
     }
 }
