Update with message on email

--- a/FeastMobile/FeastMobile.csproj
+++ b/FeastMobile/FeastMobile.csproj
@@ -71,4 +71,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionFeastMobileHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+
 </Project>
